--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,10 @@
 <!--                <category android:name="android.intent.category.BROWSABLE" />-->
 <!--                <data android:scheme="http" />-->
 <!--            </intent-filter>-->
+            <intent-filter>
+                <action android:name="ORDER_RECIEVED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
         <service
