--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'com.google.firebase:firebase-auth'
+
+    implementation 'com.google.android.play:core:1.10.3'
 }
 apply plugin: 'com.google.gms.google-services'
